force-app/main/default/objects/SALARY_DETAILS__c/SALARY_DETAILS__c.object-meta.xml
<CustomObject>
    <label>SALARY DETAILS</label>
    <nameField>
        <displayFormat>Sr.No-{00000}</displayFormat>
        <label>Sr. No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SALARY DETAILS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>