force-app/main/default/objects/SALARY_DETAILS__c/fields/Basic__c.field-meta.xml
<CustomField>
    <fullName>Basic__c</fullName>
    <label>Basic</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>