force-app/main/default/objects/SALARY_DETAILS__c/fields/Credited_To__c.field-meta.xml
<CustomField>
    <fullName>Credited_To__c</fullName>
    <label>Credited To</label>
    <referenceTo>Employee1__c</referenceTo>
    <relationshipLabel>SALARY DETAILS</relationshipLabel>
    <relationshipName>SALARY_DETAILS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>