force-app/main/default/objects/SALARY_DETAILS__c/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <label>HRA</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>