force-app/main/default/objects/SALARY_DETAILS__c/fields/Salary_Credited_Date__c.field-meta.xml
<CustomField>
    <fullName>Salary_Credited_Date__c</fullName>
    <label>Salary Credited Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>