force-app/main/default/objects/SALARY_DETAILS__c/fields/Salary_ID__c.field-meta.xml
<CustomField>
    <fullName>Salary_ID__c</fullName>
    <displayFormat>SAL-{000000}</displayFormat>
    <label>Salary ID</label>
    <type>AutoNumber</type>
</CustomField>