force-app/main/default/objects/SALARY_DETAILS__c/validationRules/Bank_account_details_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_account_details_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
    ISBLANK( Bank_Account_Number__c ),
    ISBLANK( Bank_Details__c )
   
)</errorConditionFormula>
    <errorMessage>Please fill bank details</errorMessage>
</ValidationRule>