force-app/main/default/objects/SALARY_DETAILS__c/validationRules/Bank_account_once_set_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_account_once_set_cannot_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(PRIORVALUE( Bank_Account_Number__c ))), ISCHANGED(Bank_Account_Number__c))</errorConditionFormula>
    <errorMessage>Cannot change account number</errorMessage>
</ValidationRule>