force-app/main/default/objects/SALARY_DETAILS__c/validationRules/Emp_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Emp_Status</fullName>
    <active>true</active>
    <errorConditionFormula>$ObjectType.Employee1__c.Fields.Status__c  &lt;&gt; &quot;In-Active&quot;</errorConditionFormula>
    <errorMessage>Employee must be active</errorMessage>
</ValidationRule>